crates/fig-lexer/tests/snapshots/integration_tests__types__array_types.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Type
- Ident: Buffer
- Eq
- LBracket
- U8
- Semicolon
- IntegerLiteral:
    base: Decimal
    digits: "1024"
    suffix: ~
- RBracket
- Newline
- Type
- Ident: Vec3
- Eq
- LBracket
- F32
- Semicolon
- IntegerLiteral:
    base: Decimal
    digits: "3"
    suffix: ~
- RBracket
- Newline
- Type
- Ident: Grid
- Eq
- LBracket
- I32
- Semicolon
- IntegerLiteral:
    base: Decimal
    digits: "64"
    suffix: ~
- RBracket
- Newline
