crates/fig-lexer/tests/snapshots/integration_tests__types__namespaced_aliases.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Type
- Ident: String
- Eq
- LBracket
- U8
- RBracket
- Newline
- Type
- Ident: Vector2
- ColonColon
- Ident: Alpine
- Eq
- I32
- Newline
- Type
- Ident: math
- ColonColon
- Ident: Matrix
- Eq
- I32
- Newline
