crates/fig-lexer/tests/snapshots/integration_tests__types__ok_null_optional.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Type
- Ident: Unit
- Eq
- OkLiteral
- Newline
- Type
- Ident: Nothing
- Eq
- "Null"
- Newline
- Type
- Ident: OptInt
- Eq
- Question
- I32
- Newline
- Type
- Ident: OptBool
- Eq
- Question
- Bool
- Newline
- Type
- Ident: OptFloat
- Eq
- Question
- F64
- Newline
