crates/fig-lexer/tests/snapshots/integration_tests__types__primitive_aliases.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Type
- Ident: Byte
- Eq
- U8
- Newline
- Type
- Ident: Short
- Eq
- I16
- Newline
- Type
- Ident: Int
- Eq
- I32
- Newline
- Type
- Ident: Long
- Eq
- I64
- Newline
- Type
- Ident: UInt
- Eq
- U32
- Newline
- Type
- Ident: Float
- Eq
- F32
- Newline
- Type
- Ident: Double
- Eq
- F64
- Newline
- Type
- Ident: Bool
- Eq
- Bool
- Newline
