crates/fig-lexer/tests/snapshots/integration_tests__types__slice_types.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Type
- Ident: ByteSlice
- Eq
- LBracket
- U8
- RBracket
- Newline
- Type
- Ident: IntSlice
- Eq
- LBracket
- I32
- RBracket
- Newline
- Type
- Ident: BoolSlice
- Eq
- LBracket
- Bool
- RBracket
- Newline
- Type
- Ident: SliceOfSlices
- Eq
- LBracket
- LBracket
- U8
- RBracket
- RBracket
- Newline
